# tappy

./: .gitignore  README.md  test_journal_entries.json
app/: globals.css  layout.tsx
apps/api/: .env.example  SKILLS.md  create_skills.py  pyproject.toml  test_skills.py  update_skill_ids.py
apps/api/app/: database.py  main.py  models.py  schemas.py  skill_definitions.py  skills.py
apps/web/: .env.example  package.json  tailwind.config.ts  tsconfig.json
apps/web/app/: globals.css  layout.tsx  page.tsx
apps/web/app/inbox/: page.tsx
apps/web/app/new/: page.tsx
apps/web/components/: AgenticSteps.tsx  Toast.tsx  editor.tsx  sidebar.tsx  theme-provider.tsx
apps/web/components/ui/: button.tsx  card.tsx  textarea.tsx
apps/web/lib/: api.ts
apps/web/types/: api.ts
docs/browser-use/: QUICKSTART.md  integration-guide.md  skills-api.md
tappy/: CREATE_SKILLS.md  README.md  package.json  test_integration.sh  test_skills.py
tappy/apps/api/: .env.example  SKILLS.md  pyproject.toml  test_journal_data.txt
tappy/apps/api/app/: main.py  models.py  schemas.py  skill_definitions.py  skills.py
tappy/apps/api/scripts/: create_skill.py  login_xcom.py  test_skills.py
tappy/apps/web/: next-env.d.ts  package.json  tailwind.config.ts  tsconfig.json
tappy/apps/web/app/: globals.css  layout.tsx  page.tsx
tappy/apps/web/components/: editor.tsx  mini-calendar.tsx  notification-provider.tsx  sidebar.tsx
tappy/apps/web/lib/: api.ts  inbox-context.tsx  useSSE.ts
tappy/apps/web/types/: api.ts  editorjs.d.ts
tappy/docs/browser-use/: SETUP_SUMMARY.md
(+4 files in other folders)
